fix text overflow on container name

--- a/client/assets/styles/scss/layout/instance-header.scss
+++ b/client/assets/styles/scss/layout/instance-header.scss
@@ -29,6 +29,8 @@
 }
 
 .instance-header-name {
+  flex: 1 1 300px;
+  padding-right: 6px;
 
   .small {
     opacity: .5;
@@ -40,6 +42,12 @@
   }
 
   // pr badge
+  .btn-state {
+    display: inline-block;
+    position: relative;
+    top: 1px;
+  }
+
   .btn {
     margin-left: $xxs;
     padding-left: 0;
@@ -102,7 +110,7 @@
 }
 
 .instance-header-actions {
-  flex: 0 0 690px;
+  flex: 0 1 690px;
 
   > * {
 
